[workspace]
resolver = "2"
members = [
    "ebpf_streamer",
]
default-members = ["ebpf_streamer"]

[workspace.package]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
aya-build = { git = "https://github.com/aya-rs/aya", branch = "main", default-features = false }
aya = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya-log = { git = "https://github.com/aya-rs/aya", branch = "main" }

anyhow = { version = "1", default-features = false }
libc = { version = "0.2.159", default-features = false }
log = { version = "0.4.22", default-features = false }
