[package]
name = "burster"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Lightweight stack allocated rate limiter implementations"
documentation = "https://docs.rs/burster"
repository = "https://github.com/jmlepisto/burster"

keywords = [
    "token_bucket",
    "rate_limiting",
    "networking",
    "no_std",
]

categories = [
    "no-std",
    "no-std::no-alloc",
    "algorithms",
]

[features]
default = ["std"]
std = []

[dependencies]
rustversion = "1.0.18"

[dev-dependencies]
rand = "0.8.5"
