[workspace]
resolver = "2"
members = [
    "nerscfslat",
    "nerscfslat-common",
    "nerscfslat-ebpf-close",
    "nerscfslat-ebpf-fsync",
    "nerscfslat-ebpf-iterread",
    "nerscfslat-ebpf-iterwrite",
    "nerscfslat-ebpf-read",
    "nerscfslat-ebpf-readv",
    "nerscfslat-ebpf-writev",
    "nerscfslat-ebpf-write",
]
default-members = ["nerscfslat", "nerscfslat-common"]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.dependencies]
aya = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-build = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-ebpf = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-log = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", default-features = false }

anyhow = { version = "1", default-features = false }
cargo_metadata = { version = "0.23.0", default-features = false }
env_logger = { version = "0.11.5", default-features = false }
libc = { version = "0.2.159", default-features = false }
log = { version = "0.4.22", default-features = false }
smol = { version = "2", default-features = false }
ctrlc = { version = "3", default-features = false, features = ["termination"] }
which = { version = "6.0.0", default-features = false }

[profile.release.package.nerscfslat-ebpf-iterread]
debug = 2
codegen-units = 1

[profile.dev.package.nerscfslat-ebpf-iterread]
debug = "full"
codegen-units = 1
opt-level = 0

[profile.release.package.nerscfslat-ebpf-iterwrite]
debug = 2
codegen-units = 1

[profile.dev.package.nerscfslat-ebpf-iterwrite]
debug = "full"
codegen-units = 1
opt-level = 0

[profile.release.package.nerscfslat-ebpf-read]
debug = 2
codegen-units = 1

[profile.dev.package.nerscfslat-ebpf-read]
debug = "full"
codegen-units = 1
opt-level = 0

[profile.release.package.nerscfslat-ebpf-readv]
debug = 2
codegen-units = 1

[profile.dev.package.nerscfslat-ebpf-readv]
debug = "full"
codegen-units = 1
opt-level = 0

[profile.release.package.nerscfslat-ebpf-close]
debug = 2
codegen-units = 1
opt-level = 0

[profile.dev.package.nerscfslat-ebpf-close]
debug = "full"
codegen-units = 1
opt-level = 0

[profile.release.package.nerscfslat-ebpf-fsync]
debug = 2
codegen-units = 1

[profile.dev.package.nerscfslat-ebpf-fsync]
debug = "full"
codegen-units = 1
opt-level = 0

[profile.release.package.nerscfslat-ebpf-writev]
debug = 2
codegen-units = 1

[profile.dev.package.nerscfslat-ebpf-writev]
debug = "full"
codegen-units = 1
opt-level = 0

[profile.release.package.nerscfslat-ebpf-write]
debug = 2
codegen-units = 1

[profile.dev.package.nerscfslat-ebpf-write]
debug = "full"
codegen-units = 1
opt-level = 0
