[workspace]
resolver = "2"
members = [
    "nerscfslat",
    "nerscfslat-common",
    "nerscfslat-ebpf",
]
default-members = ["nerscfslat", "nerscfslat-common"]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.dependencies]
aya = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-build = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-ebpf = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-log = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", default-features = false }

anyhow = { version = "1", default-features = false }
cargo_metadata = { version = "0.23.0", default-features = false }
env_logger = { version = "0.11.5", default-features = false }
libc = { version = "0.2.159", default-features = false }
log = { version = "0.4.22", default-features = false }
smol = { version = "2", default-features = false }
ctrlc = { version = "3", default-features = false, features = ["termination"] }
which = { version = "6.0.0", default-features = false }

[profile.release.package.nerscfslat-ebpf]
debug = 2
codegen-units = 1

[profile.dev.package.nerscfslat-ebpf]
debug = "full"
codegen-units = 1
opt-level = 0
