[package]
name = "ebpf_ldms"
version.workspace = true
authors = ["Ershaad Basheer <ebasheer@lbl.gov>"]
description = "Daemon that relays eBPF generated messages to LDMS"
edition.workspace = true

license.workspace = true

[dependencies]
anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
aya-log = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
smol = "1.3.0"
ctrlc.workspace = true
time.workspace = true
async-io.workspace = true
async-channel.workspace = true
nix.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-transcode.workspace = true
minicbor-serde.workspace = true
minicbor.workspace = true
clap.workspace = true
ciborium.workspace = true
ldms_stream = { path = "../ldms_stream" }
ftail.workspace = true
burster.workspace = true
[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }

[[bin]]
name = "ebpf_ldms"
path = "src/main.rs"

[package.metadata.generate-rpm]
name = "ebpf_ldms"
license = "BSD-3-Clause-LBNL"
summary = "Daemon that streams ebpf-generated data to LDMS"
auto-req = "disabled"
assets = [
    { source = "../../target/release/ebpf_ldms", dest = "/usr/sbin/ebpf_ldms", mode = "755" },
    { source = "../deploy/nersc-ebpf-ldms.service", dest = "/etc/systemd/system/nersc-ebpf-ldms.service", mode = "644" },
    { source = "../deploy/ebpf_ldms", dest = "/etc/sysconfig/ebpf_ldms", mode = "644", config = "noreplace" },
]
post_install_script = """\
    if [ -x /usr/bin/systemctl ]; then
            test -n "$FIRST_ARG" || FIRST_ARG="$1"
            [ -d /var/lib/systemd/migrated ] || mkdir -p /var/lib/systemd/migrated || :

            if [ "$YAST_IS_RUNNING" != "instsys" ]; then
                    /usr/bin/systemctl daemon-reload || :
            fi
            for service in nersc-ebpf-ldms.service ; do
                    sysv_service=${service%.*}

                    if [ -e /run/systemd/rpm/needs-preset/$service ]; then
                            /usr/bin/systemctl preset $service || :
                            rm "/run/systemd/rpm/needs-preset/$service" || :

                    elif [ -e /run/systemd/rpm/needs-sysv-convert/$service ]; then
                            /usr/sbin/systemd-sysv-convert --apply $sysv_service || :
                            rm "/run/systemd/rpm/needs-sysv-convert/$service" || :
                            touch /var/lib/systemd/migrated/$sysv_service || :
                    fi
            done
    fi
    """
pre_uninstall_script = """\
    test -n "$FIRST_ARG" || FIRST_ARG="$1"
    if [ "$FIRST_ARG" -eq 0 -a -x /usr/bin/systemctl ]; then
            # Package removal, not upgrade
            /usr/bin/systemctl --no-reload disable nersc-ebpf-ldms.service || :
            (
                    test "$YAST_IS_RUNNING" = instsys && exit 0
                    test -f /etc/sysconfig/services -a \
                         -z "$DISABLE_STOP_ON_REMOVAL" && . /etc/sysconfig/services
                    test "$DISABLE_STOP_ON_REMOVAL" = yes -o \
                         "$DISABLE_STOP_ON_REMOVAL" = 1 && exit 0
                    /usr/bin/systemctl stop nersc-ebpf-ldms.service
            ) || :
    fi
    """
post_uninstall_script = """\
    test -n "$FIRST_ARG" || FIRST_ARG="$1"

    if [ $1 -eq 0 ]; then
            # Package removal
            for service in nersc-ebpf-ldms.service ; do
                    sysv_service="${service%.*}"
                    rm -f "/var/lib/systemd/migrated/$sysv_service" || :
            done
    fi
    if [ -x /usr/bin/systemctl ]; then
            /usr/bin/systemctl daemon-reload || :
    fi

    if [ "$FIRST_ARG" -ge 1 ]; then
            # Package upgrade, not uninstall
            if [ -x /usr/bin/systemctl ]; then
                    (
                            test "$YAST_IS_RUNNING" = instsys && exit 0
                            test -f /etc/sysconfig/services -a \
                                 -z "$DISABLE_RESTART_ON_UPDATE" && . /etc/sysconfig/services
                            test "$DISABLE_RESTART_ON_UPDATE" = yes -o \
                                 "$DISABLE_RESTART_ON_UPDATE" = 1 && exit 0
                            /usr/bin/systemctl try-restart nersc-ebpf-ldms.service
                    ) || :
            fi
    fi
    """

[package.metadata.generate-rpm.requires]
ovis-ldms = ">= 4.4"
bpftool = "*"
