[package]
name = "nerscfslat-ebpf-iterread"
version = "0.1.0"
edition.workspace = true

[dependencies]
nerscfslat-common = { path = "../nerscfslat-common" }

aya-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "nerscfslat-iterread"
path = "src/main.rs"
