[package]
name = "nerscfslat-ebpf-iterwrite"
version = "0.1.0"
edition.workspace = true

[dependencies]
nerscfslat-common = { path = "../nerscfslat-common" }

aya-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "nerscfslat-iterwrite"
path = "src/main.rs"
