[package]
name = "nerscfslat-ebpf-truncate"
version = "0.1.0"
edition.workspace = true

[dependencies]
nerscfslat-common = { path = "../nerscfslat-common" }

aya-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "nerscfslat-truncate"
path = "src/main.rs"
