[package]
name = "nerscfslat-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
nerscfslat-common = { path = "../nerscfslat-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
minicbor = { version = "2.1.3", path = "../../minicbor/minicbor" }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "nerscfslat"
path = "src/main.rs"
