[package]
name = "vfslatency-common"
version.workspace = true
edition.workspace = true

license.workspace = true

[features]
default = []
user = ["aya"]

[dependencies]
aya = { workspace = true, optional = true }
aya-ebpf.workspace = true
aya-log-ebpf = { workspace = true }
bare_metal_modulo = { version = "1.2.6", default-features = false }
minicbor = { version = "2.1.3", path = "../minicbor/minicbor" }

[lib]
path = "src/lib.rs"
