[package]
name          = "minicbor"
version       = "2.1.3"
authors       = ["Toralf Wittner <tw@dtex.org>"]
license       = "BlueOak-1.0.0"
edition       = "2024"
description   = "A small CBOR codec suitable for no_std environments."
repository    = "https://github.com/twittner/minicbor"
keywords      = ["cbor", "minicbor", "serialization", "encoding", "no_std"]
categories    = ["encoding"]

[package.metadata.docs.rs]
features = ["std", "derive", "half"]

[features]
full   = ["std", "derive", "half"]
alloc  = []
std    = ["alloc"]
derive = ["minicbor-derive"]

[dependencies]
minicbor-derive = { version = "0.18.3", path = "../minicbor-derive", optional = true }
half            = { version = "2.4.0", default-features = false, optional = true }

[dev-dependencies]
minicbor = { path = ".", features = ["std", "half"] }

[[bin]]
name = "cbor-display"
required-features = ["std", "half"]
